name:             HQL
version:          0.0.1
license:          BSD3
license-file:     LICENSE
category:         Finance
author:           Johan Astborg <joastbg@gmail.com>
                  Andreas Bock <bock@andreasbock.dk>
maintainer:       Johan Astborg <joastbg@gmail.com>
                  Andreas Bock <bock@andreasbock.dk>
copyright:        (c) Sinan Gabel, all rights reserved.
homepage: 	  https://github.com/HIPERFIT/HQL
bug-reports:      https://github.com/HIPERFIT/HQL/issues
build-type:       Simple
cabal-version:    >= 1.8
description:
  Porting Sinan Gabel's DerivativesExpert (Mathematica) to Haskell.

library
  exposed-modules:
    Instruments.FixedIncome

test-suite tests
  hs-source-dirs: tests
  type:	      exitcode-stdio-1.0
  main-is:    Properties.hs

source-repository head
  type:       git
  location:   git://github.com/HIPERFIT/HQL.git
