name:             HQL
version:          0.0.1
license:          BSD3
license-file:     LICENSE
category:         Finance
author:           Johan Astborg <joastbg@gmail.com>
maintainer:       Johan Astborg <joastbg@gmail.com>
                  Andreas Bock <bock@andreasbock.dk>
copyright:        (c) Johan Astborg, Andreas Bock
homepage: 	  https://github.com/HIPERFIT/HQL
bug-reports:      https://github.com/HIPERFIT/HQL/issues
build-type:       Simple
cabal-version:    >= 1.8
description:
  Porting Sinan Gabel's DerivativesExpert (Mathematica) to Haskell.

library
  hs-source-dirs: src
  exposed-modules:
    Utils.Calendar,
    Utils.Currency,
    --Utils.DayCount,
    Instruments.Utils.InterestRate,
    Instruments.Utils.TermStructure,
    Instruments.Utils.Discounting,
    Utils.Graphics.Visualize
    --Instruments.FixedIncome.Bonds.Bonds
  other-modules:
--   Instruments.Utils.TermStructure,
   --Instruments.Utils.Discounting

  build-depends:
    base == 4.*,
    containers,
    deepseq,
    hashable >= 1.1.2.0,
    mtl,
    old-locale,
    template-haskell >= 2.4,
    text >= 0.11.1.0,
    time,
    array >= 0.4.0.1,
    gnuplot >= 0.5.2

  ghc-options: -O2 -Wall

test-suite tests
  hs-source-dirs: tests
  type:	      exitcode-stdio-1.0
  main-is:    Properties.hs
  other-modules:
    --HQL.Instruments.Utils.Discounting
  build-depends:
    HQL,
    QuickCheck >= 2.6,
    HUnit,
    base,
    containers,
    bytestring,
    template-haskell,
    test-framework,
    test-framework-quickcheck2,
    test-framework-hunit,
    text,
    time,
    ieee754,
    unordered-containers,
    vector,
    ghc-prim >= 0.2

source-repository head
  type:       git
  location:   git://github.com/HIPERFIT/HQL.git
